--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.7.0,<3.9"
+spython = "^0.1.12"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
