--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,6 +70,11 @@ jobs:
       with:
         path: .venv
         key: venv-${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
+
+    - name: Show pip version
+      run: |
+        poetry run pip -V
+
     - name: Install dependencies
       run: |
         poetry config virtualenvs.in-project true
