--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ m2r2 = "<0.3.3"
 sphinx = "<5"
 sphinx-autodoc-typehints = "<=1.18"
 sphinx-rtd-theme = "^1.1.1"
+jinja2 = "^3.1.2"
 
 [tool.black]
 line-length = 100
