Updated html theme for docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,5 @@
     "${workspaceFolder}/.venv"
   ],
   "esbonio.server.enabled": true,
-  "esbonio.sphinx.confDir": "${workspaceFolder}/docs/",
+  "esbonio.sphinx.confDir": "${workspaceFolder}/docs",
 }
